# safatanc-connect-core

./: .dockerignore  Cargo.toml  Dockerfile
.sqlx/: query-0b5806a06606c00734244c58552aee7fff570879c0a130f7bb5e701274052099.json  query-0e2768d34a2873c5f6ceef8b3f1d5d4f39589636f0beac9b709b4ff35a982904.json  query-0e643a16d8ffdb4e9f003b88cd8b35f81bc2030b30e7b3b2a1626722daee1d0a.json  query-17ec9ca8a42e498753473dab2f9fb7c82940be899d6d0cf4f35c371dabe273f4.json  query-19ab64be6b99d6b7e34bfc691b685cd3a5255c0a5250e8e93e9b6b76b09827db.json  query-1d1a8ba56209ee408adcc70604f016cf5275732070107d1332aa8493dcd80f9d.json  query-1d8f08433abe827ffcdfefb27ebc65765f8bb471dcf47d6d4c3a87ce76eb7099.json  query-1ec647543a75d11d5e565c093fe507da057c72b731e18bfef0ad8bc3585ceb6f.json  query-1f4ead908d93882a24c51bb13e99e8ef7d933f473cff2152f0fcebb49c6a0b8a.json  query-3c06c3546ffa3d14eb1a17becc36b57837565c80a1467b77811c90e18917d96f.json  query-40a72fd7f2d4847e721885e62b82cae4573fcab83d116d33bfc2f515a1b165af.json  query-411548a56ec55a8fe2c6b2c0e81f48553291d2b3b051ae629d6cd4c7eeab83c1.json  query-4ac35be6b41eab09f28f3390e4a03f18faa2b626d83b5194a828989a4226cb70.json  query-4c9d410a72b0547eec591f4cf76d7abd89f6081d0e3143ca1837b9479d3cb99d.json  query-4ddd309fd544be67dc5ce5f73ea64185ccf5c1aa607ae8c9653aba3f1ba53bd4.json  query-4ec786257ac1837e33593691ff14e9af351c04aa88b3b49a4daa5faba1576174.json  query-4f15f57ab11ae64153525bf758b7a6b3ed9d6d8cc80a9b8020b1e7f71bca5043.json  query-513c515869b9e730a6105e09bca5f4e9ec1f37ccde24137644169710a78a16c2.json  (+37 more)
docs/: Safatanc Connect Core.postman_collection.json  (+2 more)
(+86 files in other folders)
