[package]
name = "safatanc-connect"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "json",
] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID handling
uuid = { version = "1.6", features = ["v4", "serde"] }

# Authentication
jsonwebtoken = "9.2"
oauth2 = "4.4"
argon2 = "0.5"       # Password hashing
rand = "0.8"         # For generating random tokens/salts

# Configuration
dotenv = "0.15"
config = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP client (for OAuth2 flows)
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.88"
